argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-dev-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - aks.polinetwork.org
    secretName: app-dev-tls
  rules:
    - host: aks.polinetwork.org
      http:
        paths:
          - path: /argocd/
            pathType: Prefix
            backend:
              service:
                name: argo-argocd-server
                port:
                  number: 80
